Map: changed wrapper from container to row. This solved the issue of the map not showing o the page. Form: changed the container on the form to container-fluid which solved the issue with the form not showing. In addition, added to the CSS for the form to give a max width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,7 @@ html {
     background-color: #66a182ff;
     color: black;
     font-size: large;
+    max-width: 80%;
 }
 
 .form-textbox-style {
